--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
     <h1>Hello World!</h1>
     <div><img src="hello.png" alt="Hello from Dat Linux" style="width:100%;max-width:960px"></div>
-    <p>THis is the first file in my new Git Repo.</p>
+    <p>This is the first file in my new Git Repo.</p>
     <p>This line is here to show how merging works.</p>
-    <p>A new line in our file!</p>
     <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 </body>
 </html>
